<resources>
    <string name="app_name">CantrEye</string>
    <string name="header_text">CantrEye</string>
    <string name="version_info" translatable="false">1.0.3.</string>

    <!-- Strings related to login -->
    <string name="ID_form_text" translatable="false">ID</string>
    <string name="pass_form_text">Password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_out_text">Sign out</string>
    <string name="error_incorrect_credentials">Incorrect credentials</string>
    <string name="error_old_API">The communication protool used in this app is not up to date therefore it will not log in</string>
    <string name="error_field_required">ID and password fields are required</string>
    <string name="error_timed_out">Connection timed out</string>
    <string name="error_game_locked">Cantr unavailable at the moment</string>
    <string name="error_unknown">Unknown error</string>

    <!-- Other Strings -->
    <string name="refresh_now_button">Refresh now</string>
    <string name="go_to_game_text">Go to game</string>
    <string name="inactive_chars_notification">New Events:</string>
    <string name="no_inactive_notification">No new events</string>
    <string name="and">and</string>
    <string name="storage_adress" translatable="false">StorageAdress</string>
    <string name="notifications_on">Enable notifications</string>
    <string name="notifications_off">Disable notifications</string>
    <string name="notifications_on_toast">Notifications enabled</string>
    <string name="notifications_off_toast">Notifications disabled</string>
    <string name="about_text">About</string>
    <string name="back_text">Return</string>
    <string name="donate_text">Donate!</string>
    <string name="credits_text">The app is created and developed by re4der. Feel free to PM me on Cantr forums or Cantr discord!\n\nCantrEye was put in Play Store thanks to donations from these people:\n-Sasza\n-notized\n-Arval\n-Vanya\n\nThanks for your support and enjoy using CantrEye!</string>
    <string name="polish_portal_button">Polish Cantr portal</string>
    <string name="ticks_text" translatable="false">Cantr Ticks</string>
    <string name="wiki_text">Cantr Wiki</string>
    <string name="not_channel_name">CantrEye Notification Channel</string>
</resources>
