<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.theglorious.re4der.cantreye.LoginActivity">

    <!-- Login progress -->

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/version_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_info"
        android:textAlignment="center"
        android:textColor="@color/textColor" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_forms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ID_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ID_form_text"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:text="119704"
                    android:textColor="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass_form_text"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="hu1500fi"
                    android:textColor="@color/textColor" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/autolog_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autolog_box_text"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:onClick="attemptLogin"
                android:text="@string/sign_in_text"
                android:textColor="@color/textColor"
                android:textColorLink="@color/textColor"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
