<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.theglorious.re4der.cantreye.CharacterListActivity">


    <TextView
        android:id="@+id/id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="playerID"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/notifications_on_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6px"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:elevation="0dp"
                    android:onClick="startNotificationsAction"
                    android:text="@string/notifications_on"
                    android:textAlignment="center"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/notifications_off_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6px"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:elevation="0dp"
                    android:onClick="stopNotificationsAction"
                    android:text="@string/notifications_off"
                    android:textAlignment="center"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <Button
                android:id="@+id/open_cantr_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6px"
                android:background="@color/colorAccent"
                android:elevation="0dp"
                android:onClick="goToGame"
                android:text="@string/go_to_game_text"
                android:textAlignment="center"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/placeholder_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6px"
                android:background="@color/colorAccent"
                android:elevation="0dp"
                android:text="If you can see this button then something is wrong. Like really wrong.."
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:visibility="invisible" />

            <Button
                android:id="@+id/logoff_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6px"
                android:background="@color/colorAccent"
                android:elevation="0dp"
                android:onClick="logoff"
                android:text="@string/sign_out_text"
                android:textAlignment="center"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
